subject chooser for assignments table